Updated layout of new added item

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="@string/todo"
-            android:inputType="textPersonName" />
+            android:inputType="textCapSentences" />
 
         <Button
             android:id="@+id/addButton"
